Issue 5384: Permissions matrix cut off on Permissions tab

--- a/core/modules/node/css/node.admin.css
+++ b/core/modules/node/css/node.admin.css
@@ -1,4 +1,3 @@
-
 /**
  * @file
  * Styles for administration pages.
@@ -9,4 +8,11 @@
  */
 .revision-current {
   background: #ffc;
+}
+
+/**
+ * Allow permissions matrix to scroll on "Add Content Type" form.
+ */
+#edit-permissions > .fieldset-wrapper > .form-item {
+  overflow-x: scroll;
 }
